--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+  <script src="https://kit.fontawesome.com/fbae4c1f99.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
