Migrating to Composition Api

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       continue.</strong>
   </noscript>
   <div id="app"></div>
+  <script src="https://kit.fontawesome.com/fbae4c1f99.js" crossorigin="anonymous"></script>
   <script type="module" src="/src/main.js"></script>
 </body>
 
